--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <LinearLayout
+        android:id="@+id/top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+         <Button
+            android:id="@+id/but_add_city"
+
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight ="1"
+            android:text="ADD CITy" />
+
+        <Space
+            android:layout_width="8dp"
+            android:layout_height="0dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:id="@+id/delete_button"
+            android:layout_weight ="1"
+            android:text="Delete City" />
+    </LinearLayout>
+
 
     <ListView
         android:id = "@+id/city_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight ="1"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="0.5dp"/>
 
-    </ListView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/add_panel"
+        android:orientation="horizontal"
+        android:padding="12dp"
+        android:visibility="gone">
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:hint="City Name"/>
+        <Space
+            android:layout_height="0dp"
+            android:layout_width="8dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
