--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:layout_height="0dp"
         android:layout_weight ="1"
         android:divider="@android:color/darker_gray"
+        android:choiceMode="singleChoice"
         android:dividerHeight="0.5dp"/>
 
     <LinearLayout
@@ -52,6 +53,7 @@
         android:visibility="gone">
 
         <EditText
+            android:id="@+id/edit_city_name"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_weight="1"
@@ -59,6 +61,13 @@
         <Space
             android:layout_height="0dp"
             android:layout_width="8dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:id="@+id/confirm_button"
+            android:text="CONFIRM"/>
+
 
         </LinearLayout>
 
